--- a/index.html
+++ b/index.html
@@ -83,10 +83,9 @@
       <h2>Cómo participar</h2>
       <div class="wallet-box">
         1. Envía 1 USDT a esta wallet (TRC20):<br />
-        <strong>TNUk123ABC456XYZ789wallet</strong>
+        <strong>TQGrnp5zBwMY3tDzA34rCqRLb8Tvm63CUH</strong>
       </div>
       <p>2. Comparte el proyecto usando el hashtag <strong>#1M1USDT</strong>.<br />
-         3. Opcional: deja tu nombre en nuestro <a href="#">formulario de participación</a> (sin email requerido).</p>
     </section>
 
     <div class="cta">
@@ -96,8 +95,9 @@
     <section>
       <h2>Transparencia</h2>
       <p>Podés ver todas las transacciones en blockchain en tiempo real. El proyecto es 100% abierto.</p>
+      <div id="contenedor-contenido" style="overflow: hidden; height: 400px;"></div>
       <ul>
-        <li>Wallet pública: TNUk123ABC456XYZ789wallet</li>
+        <li>Wallet pública: TQGrnp5zBwMY3tDzA34rCqRLb8Tvm63CUH</li>
         <li>Recaudado: $12,375 USDT</li>
         <li>Participantes: 12,375 personas</li>
       </ul>
@@ -114,4 +114,19 @@
     © 2025 1M1USDT — Proyecto de colaboración social descentralizada.
   </footer>
 </body>
+<script>
+  fetch('https://tronscan.org/#/address/TQGrnp5zBwMY3tDzA34rCqRLb8Tvm63CUH')
+  .then(response => response.text())
+  .then(html => {
+    // Crea un elemento temporal para parsear el HTML
+    console.log(response);
+    const tempDiv = document.createElement('div');
+    tempDiv.innerHTML = html;
+    // Busca la sección que quieres mostrar (ej. un div con id="seccion-interes")
+    const seccionDeseada = tempDiv.getElementsByClassName('address-asset');
+    if (seccionDeseada) {
+      document.getElementById('contenedor-contenido').innerHTML = seccionDeseada.outerHTML;
+    }
+  });
+</script>
 </html>
