--- a/index.html
+++ b/index.html
@@ -5,67 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>1M1USDT | Un experimento social global</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Inter', sans-serif;
-      /* background-color: #f2f4f8; */
-      color: #111;
-    }
-    header {
-      background-color: #111827;
-      color: white;
-      padding: 2rem;
-      text-align: center;
-    }
-    main {
-      padding: 2rem;
-      max-width: 800px;
-      margin: auto;
-    }
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
-    h2 {
-      font-size: 1.75rem;
-      margin-top: 2rem;
-    }
-    p {
-      font-size: 1.1rem;
-      line-height: 1.6;
-    }
-    .wallet-box {
-      background-color: #e0f7fa;
-      padding: 1rem;
-      margin: 1rem 0;
-      border-left: 5px solid #00acc1;
-      font-size: 1.2rem;
-    }
-    .cta {
-      text-align: center;
-      margin: 2rem 0;
-    }
-    .cta a {
-      background-color: #00acc1;
-      color: white;
-      padding: 1rem 2rem;
-      font-size: 1.2rem;
-      text-decoration: none;
-      border-radius: 8px;
-    }
-    .videos iframe {
-      width: 100%;
-      height: 300px;
-      margin: 1rem 0;
-    }
-    footer {
-      text-align: center;
-      padding: 2rem;
-      font-size: 0.9rem;
-      color: #555;
-    }
-  </style>
+  <style rel="stylesheet" href="assets/css/main.css"></style>
 </head>
 <body>
   <header>
@@ -85,6 +25,9 @@
         1. Envía 1 USDT a esta wallet (TRC20):<br />
         <strong>TQGrnp5zBwMY3tDzA34rCqRLb8Tvm63CUH</strong>
       </div>
+      <p>
+        <img src="assets/img/address.png" width="200" alt="">
+      </p>
       <p>2. Comparte el proyecto usando el hashtag <strong>#1M1USDT</strong>.<br />
     </section>
     <section>
@@ -94,11 +37,11 @@
         <iframe src="https://tronscan.org/#/address/TQGrnp5zBwMY3tDzA34rCqRLb8Tvm63CUH" style="top:-280px; left: 5px; position:absolute;" width="700" height="1020" scrolling="no" frameborder="0" ></iframe>
       </div>
     </section>
-    <section class="videos">
+    <!-- <section class="videos">
       <h2>Videos</h2>
       <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Video 1 - El experimento ha comenzado" frameborder="0" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Video 2 - Por qué 1 USDT importa" frameborder="0" allowfullscreen></iframe>
-    </section>
+    </section> -->
   </main>
 
   <footer>
