--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>1M1USDT | Un experimento social global</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <style rel="stylesheet" href="assets/css/main.css"></style>
+  <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 <body>
   <header>
-    <h1>1M1USDT</h1>
-    <p>¿Podemos unir a 1 millón de personas con solo 1 USDT cada una?</p>
+    <div class="container">
+      <img id="land1" src="/assets/img/world.png" alt="">
+      <img id="land2" src="/assets/img/world.png" alt="">
+      <h1>1M1USDT</h1>
+      <p>¿Podemos unir a 1 millón de personas con solo 1 USDT cada una?</p>
+    </div>
   </header>
 
   <main>
